# nlpxx

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: PCRE2.cmake
devel/: modules.md
src/: nlpxx.h
src/stem/: base.h  cistem.cpp  cistem.h  isri.cpp  isri.h  rslp.cpp  rslp.h  stem.h
src/utils/: unicode.cpp  unicode.h  utils.h
test/: stem.h  tests.cpp  utils.h
